// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PrimaryKey > should register class-level composite primary key 1`] = `
{
  "appendOnly": false,
  "cache": null,
  "checks": [],
  "defaultOrder": null,
  "embeddedLists": [],
  "entity": {
    "comment": null,
    "decorator": "Entity",
    "name": "PrimaryKeyComposite",
    "namespace": null,
  },
  "extras": [],
  "fields": [
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "tenantId",
      "max": null,
      "min": null,
      "mode": null,
      "name": "tenantId",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": false,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "uuid",
      "typedJson": null,
    },
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "userId",
      "max": null,
      "min": null,
      "mode": null,
      "name": "userId",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": false,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "uuid",
      "typedJson": null,
    },
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "name",
      "max": null,
      "min": null,
      "mode": null,
      "name": "name",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": false,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "string",
      "typedJson": null,
    },
  ],
  "filters": [],
  "generated": [],
  "hooks": [],
  "indexes": [],
  "inheritance": null,
  "primaryKeys": [
    "tenantId",
    "userId",
  ],
  "relationCounts": [],
  "relationIds": [],
  "relations": [],
  "schemas": [],
  "scopeKeys": [],
  "target": [Function],
  "uniques": [],
  "versionKeys": [],
}
`;

exports[`PrimaryKey > should register field-level primary key 1`] = `
{
  "appendOnly": false,
  "cache": null,
  "checks": [],
  "defaultOrder": null,
  "embeddedLists": [],
  "entity": {
    "comment": null,
    "decorator": "Entity",
    "name": "PrimaryKeyFieldLevel",
    "namespace": null,
  },
  "extras": [],
  "fields": [
    {
      "arrayType": null,
      "collation": null,
      "comment": null,
      "computed": null,
      "decorator": "Field",
      "default": null,
      "embedded": null,
      "encrypted": null,
      "enum": null,
      "hideOn": [],
      "key": "id",
      "max": null,
      "min": null,
      "mode": null,
      "name": "id",
      "nullable": false,
      "order": null,
      "precision": null,
      "readonly": false,
      "scale": null,
      "schema": null,
      "transform": null,
      "type": "uuid",
      "typedJson": null,
    },
  ],
  "filters": [],
  "generated": [
    {
      "generator": null,
      "key": "id",
      "length": null,
      "max": null,
      "min": null,
      "namespace": null,
      "strategy": "uuid",
    },
  ],
  "hooks": [],
  "indexes": [],
  "inheritance": null,
  "primaryKeys": [
    "id",
  ],
  "relationCounts": [],
  "relationIds": [],
  "relations": [],
  "schemas": [],
  "scopeKeys": [],
  "target": [Function],
  "uniques": [],
  "versionKeys": [],
}
`;
